# flop-wise

./: CMakeLists.txt  README.md  package-lock.json  package.json
src/apps/: kuhn_solve.cpp
src/core/: kuhn_game.cpp  kuhn_game.hpp
src/solver/: cfr.cpp  cfr.hpp  infoset.cpp  infoset.hpp  strategy_book.cpp  strategy_book.hpp
tests/: check.hpp  test_kuhn.cpp
